--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
+        * eu.po: Fixed some typos.
+	
+2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
 	* eu.po: Updated Basque trasnlation.
 
 2005-04-11  Alexander Shopov  <ash@contact.bg>
