--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-19  David Lodge  <dave@cirt.net>
+
+	* en_GB.po: Updated British English translation.
+
 2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
