Updated Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-22 Dan Korostelev <dan@ats.energo.ru>
+
+	* ru.po: Updated Russian translation.
+
 2005-04-19  David Lodge  <dave@cirt.net>
 
 	* en_GB.po: Updated British English translation.
