--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-23  Dan Korostelev <dan@ats.energo.ru>
+
+	* ru.po: Updated Russian translation.
+
 2005-04-14  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
