--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
         * eu.po: Fixed some typos.
