Finnish translation merged from gtk-2-6 and updated.
2005-04-28  Tommi Vainikainen  <thv@iki.fi>

	* fi.po: Finnish translation merged from gtk-2-6 and updated.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-28  Tommi Vainikainen  <thv@iki.fi>
+
+	* fi.po: Finnish translation merged from gtk-2-6 and updated.
+
 2005-04-28  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
