Hungarian translation updated.
2005-04-28  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Hungarian translation updated.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* hu.po: Hungarian translation updated.
 
+2005-04-28  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-04-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
