--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkiconview.c (gtk_icon_view_select_path): Don't crash
+	if the path does not point to a row in the model.  (#300909,
+	Mathias Hasselmann)
+
 	* tests/testtext.c: Add some more attribute tests.
 
 	* gtk/gtktexttag.c (gtk_text_tag_class_init): Correct the documentation
