--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkiconview.c (gtk_icon_view_move_cursor_start_end): Use
+	the internal unselect_all function, since we need the unselection
+	to happen even in browse mode.  (#300995, Mathias Hasselmann)
+
 	* gtk/gtkuimanager.c (update_node): Use g_object_notify() instead
 	of triggering a ::notify by re-setting the property.  (#300982,
 	Sven Neumann)
