--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-29  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkuimanager.sgml: Refer to the correct
+	property. (#301115, Richard Hult)
+
 2005-04-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkbbox.sgml: Document that GtkButtonBox ignores
