--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in: Check for nm.
+
+	* gtk/Makefile.am: Use $(NM), not nm directly. (#301299, 
+	Nguyen Thai Ngoc Duy)
+
 	* gtk/gtkiconview.c (gtk_icon_view_move_cursor_start_end): Use
 	the internal unselect_all function, since we need the unselection
 	to happen even in browse mode.  (#300995, Mathias Hasselmann)
