--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,9 @@
 
 	* gtk/gtktreeview.c (gtk_tree_view_state_changed): Set
 	background upon state changes.  (#301651, Billy Biggs)
-	
+	(gtk_tree_view_get_path_at_pos): Take RTL into account
+	when iterating over the columns.  (#302163)
+
 	* configure.in: Check for nm.
 
 	* gtk/Makefile.am: Use $(NM), not nm directly. (#301299, 
