--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkiconview.c (gtk_icon_view_map): Get rid of this
+	function, instead show the bin_window when it is created.
+
 	* gtk/gtkradiobutton.c (gtk_radio_button_focus): Don't 
 	grab focus to unrealized widgets.  (#302240, Philip Langdale)
 
