--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-30  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
