--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Remove nonexisting functions.
+
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkuimanager.sgml: Refer to the correct
