--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,7 @@
 2005-05-02  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/tmpl/gtkselection.sgml: Remove inlined docs.
+
 	* gtk/gtk-sections.txt: Remove nonexisting functions.
 
 2005-04-29  Matthias Clasen  <mclasen@redhat.com>
