--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-02  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkcellrenderertext.c (get_size): Return a sufficient
+	width for cases where pango_layout_get_pixel_extents() returns
+	a rectangle with nonzero x. 
+
 	* gtk/gtkselection.c: Small doc fixes.
 
 	* gtk/gtkmenushell.c (gtk_menu_shell_set_take_focus): 
