--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols: 
+	* gtk/gtkdialog.h: 
+	* gtk/gtkdialog.c (gtk_dialog_get_response_for_widget): 
+	Make this function public.  (#170748, Morten Welinder)
+
 2005-05-02  Federico Mena Quintero  <federico@ximian.com>
 
 	Merged from gtk-2-6:
