--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-03  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreemodel.c: Avoid getting the interface struct
+	twice in the same function.  (#300513, Billy Biggs)
+
 	* gtk/gtkscrolledwindow.h:
 	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_get_vscrollbar): 
 	* gtk/gtk.symbols: Add getters for the scrollbars.  (#167181,
