--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-04  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated.
+
 2005-05-04  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
