--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-02  Nguyen Thai Ngoc Duy  <pclouds@gmail.com>
+
+	* vi.po: Fixed calendar:MY
+	
 2005-05-02  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
