--- a/po/vi.po
+++ b/po/vi.po
@@ -908,7 +908,7 @@ msgstr "Alt"
 #.
 #: gtk/gtkcalendar.c:700
 msgid "calendar:MY"
-msgstr "lịch:MY"
+msgstr "calendar:MY"
 
 #. Translate to calendar:week_start:0 if you want Sunday to be the
 #. * first day of the week to calendar:week_start:1 if you want Monday
