--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-07  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-05-04  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
