--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkscreen-x11.c (gdk_screen_get_width_mm) 
+	(gdk_screen_get_height_mm): Fix typos in the docs. (#303389,
+	Masao Mutoh)
+
 2005-05-06  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/gtkfilesystemunix.c (fill_in_mime_type): Don't fill the mime
