--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,7 @@
 2005-05-08  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/tmpl/visuals.sgml: Fix a typo (#303473, Masao Mutoh)
+
 	* gdk-pixbuf/tmpl/inline.sgml: 
 	* gdk-pixbuf/tmpl/file-saving.sgml: Add long descriptions.
 
