--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkalignment.c (gtk_alignment_size_allocate): Flip the
+	padding in RTL mode.  (#303572, Maciej Katafiasz)
+
 2005-05-09  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdkrgb.c (gdk_rgb_convert_0888_br, gdk_rgb_convert_8880_br): 
