--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-10  Pawan Chitrakar  <pawan@mpp.org.np>
+
+	* ne.po: Updated nepali translation
+
 2005-05-02  Nguyen Thai Ngoc Duy  <pclouds@gmail.com>
 
 	* vi.po: Fixed calendar:MY
