Updated Xhosa translation.
2005-05-10  Adi Attar  <aattar@cvs.gnome.org>

	* xh.po: Updated Xhosa translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-10  Adi Attar  <aattar@cvs.gnome.org>
+
+	* xh.po: Updated Xhosa translation.
+
 2005-04-23  Dan Korostelev <dan@ats.energo.ru>
 
 	* ru.po: Updated Russian translation.
